# ood

./: .gitignore  Adapter.sln  CMakeLists.txt  Factory.sln  Weather.sln  Weather.vcxproj  Weather.vcxproj.filters
1/: Observer.h  WeatherData.h  observer.sln  strategy.sln
1/Lib/: Lib.cpp  Lib.vcxproj  Lib.vcxproj.filters
1/SimUDuck/: SimUDuck.vcxproj
1/Test/: Test.vcxproj  test.cpp
2/: Observer.h  WeatherData.h
2/Lib/: Lib.vcxproj
2/SimUDuck/: SimUDuck.cpp  SimUDuck.vcxproj
2/Test/: test.cpp
3/: Observer.h  main.cpp  strategy.sln
3/Lib/: DuckFunctions.h  Lib.vcxproj  Lib.vcxproj.filters
3/SimUDuck/: SimUDuck.cpp
3/Test/: test.cpp
4/: Observer.h  WeatherData.h  main.cpp
Adapter/: Adapter.vcxproj  Adapter.vcxproj.filters  main.cpp
Adapter/adapters/: ModernGraphicsClassAdapter.h  ModernGraphicsObjectAdapter.h
Adapter/libs/: graphics_lib.h  modern_graphics_lib.h  shape_drawing_lib.h
AdapterTest/: AdapterTest.vcxproj  test.cpp
Factory/: Factory.vcxproj  Factory.vcxproj.filters  main.cpp  pcl.h
Factory/Canvas/: ICanvas.h  SvgCanvas.h
Factory/Client/: Client.h
Factory/Designer/: Designer.h  IDesigner.h
Tests/: Ellipse.cpp  MockCanvas.h  MockDesigner.h  MockPainter.h  MockShape.h  MockShapeFactory.h  Rectangle.cpp  RegularPolygon.cpp  ShapesFactory.cpp  Tests.vcxproj  Tests.vcxproj.filters  Triangle.cpp  pch.h  test.cpp
WTest2/: WTest2.vcxproj  test.cpp
WTest3/: WTest3.vcxproj  test.cpp
WTest4/: WTest4.vcxproj  test.cpp
lab1/: main.cpp
lab2/: main.cpp
lab3/: Circle.h  IShape.h  Rectangle.h  Triangle.h  main.cpp
(+60 files in other folders)
